--- a/templates/news.html
+++ b/templates/news.html
@@ -10,27 +10,33 @@ News
 
 <!-- В контенте на странице мы выводим все новости -->
 {% block content %}
-    <h1>Все новости: {{ all_news|length }}</h1>
+    <h1>Новостей на странице: {{ all_news|length }}</h1>
     {% if all_news %}
+
         <table>
-        <tr>
-            <td>
-                <b> Название статьи </b>
-            </td>
-            <td>
+        <thead>
+            <th>
+              <b> Название статьи </b>
+            </th>
+            <th>
                <b> Время создания </b>
-            </td>
-            <td>
+            </th>
+            <th>
                 <b> Текст новости </b>
-            </td>
-            <td>
+            </th>
+            <th>
                <b> Категория </b>
-            </td>
-            </tr>
-        {% for news in all_news %}
+            </th>
+            <th>
+               <b> Автор </b>
+            </th>
+        </thead>
+            {% for news in all_news %}
             <tr>
             <td>
-                {{ news.name|cenzor }}
+                <a href="{% url 'news_detail' news.id %}">{{ news.name|cenzor }}</a> <!-- При нажатии на имя товара в таблице нас теперь будет перекидывать на страницу конкретной новости -->
+                <a href="{% url 'news_create' news.id %}"><u>Редактировать</u></a> <!-- добавим ссылку на редактирование новости-->
+                <a href="{% url 'news_delete' news.id %}"><u> Удалить </u></a> <!-- добавим ссылку на удаление новости-->
             </td>
             <td>
                {{ news.news_create_time|date:'m-d-Y' }}
@@ -41,11 +47,36 @@ News
              <td>
                {{ news.category.name }}
             </td>
+            <td>
+              {{ news.news_author.author_user.username }}
+            </td>
             </tr>
         {% endfor %}
         </table>
+        <hr>
+        <a href="{% url 'news_create' %}">Добавить новость</a> <br>
+        <hr>
+      {% if is_paginated %}
 
-    {%  else %}
-        <h2>Новостей нет</h2>
+            {% if page_obj.has_previous %}
+                <a href="?page=1">First</a>
+                <a href="?page={{ page_obj.previous_page_number }}"><<<</a>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <a>{{ num }}</a>
+                {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+                    <a href="?page={{ num }}">{{ num }}</a>
+                {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">>>></a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+            {% endif %}
+
+        {% endif %}
     {% endif %}
+
 {% endblock content %}
