--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -17,18 +17,21 @@
                 <a class="navbar-brand" href="#">Новостной сайт</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item active">
-                   <a class="nav-link" href="/main/">Main
-                       <span class="sr-only"></span>
-                     </a>
-                           </li>
-                           <li class="nav-item">
-                               <a class="nav-link" href="/about/">About</a>
-                           </li>
-                           <li class="nav-item">
-                               <a class="nav-link" href="/contacts/">Contact</a>
-                           </li>
+                           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="/news/">Main
+                                    <span class="sr-only"></span>
+                                    </a>
+                               </li>
+                               <li class="nav-item">
+                                    <a class="nav-link" href="/news/search/">Search</a>
+                               </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/news/create/">Create</a>
+                               </li>
+{#                           <li class="nav-item">#}
+{#                               <a class="nav-link" href="/contacts/">Contact</a>#}
+{#                           </li>#}
                             </ul>
                         </li>
                     </ul>
