--- a/templates/news.html
+++ b/templates/news.html
@@ -34,7 +34,7 @@ News
             {% for news in all_news %}
             <tr>
             <td>
-                <a href="{% url 'news_detail' news.id %}">{{ news.name|cenzor }}</a> <!-- При нажатии на имя товара в таблице нас теперь будет перекидывать на страницу конкретной новости -->
+                <a href="{% url 'news_detail' news.id %}">{{ news.name|cenzor }}</a> <!-- При нажатии на имя новости в таблице нас теперь будет перекидывать на страницу конкретной новости -->
                 <a href="{% url 'news_create' news.id %}"><u>Редактировать</u></a> <!-- добавим ссылку на редактирование новости-->
                 <a href="{% url 'news_delete' news.id %}"><u> Удалить </u></a> <!-- добавим ссылку на удаление новости-->
             </td>
