--- a/templates/news_detail.html
+++ b/templates/news_detail.html
@@ -36,4 +36,6 @@ News
 
         </tr>
     </table>
+         <button> <a href="{% url 'subscribed' news.category.id %}"> Подписаться </a></button>
+
 {% endblock content %}
