--- a/templates/Week_news_to_subscribers.html
+++ b/templates/Week_news_to_subscribers.html
@@ -1,10 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
+{% extends 'flatpages/default.html' %}
+
+{% load custom_filters %} <!-- не забываем заранее загружать наши фильтры! -->
+
+<!-- Название у нас будет news -->
+{% block title %}
+Week news
+{% endblock title %}
+
+<!-- В контенте на странице мы выводим все новости -->
+{% block content %}
+    <h1>Новости за неделю:</h1>
+    {% if all_week_news %}
+
+        <table>
+        <thead>
+            <th>
+              <b> Название статьи </b>
+            </th>
+            <th>
+               <b> Время создания </b>
+            </th>
+            <th>
+                <b> Текст новости </b>
+            </th>
+            <th>
+               <b> Категория </b>
+            </th>
+            <th>
+               <b> Автор </b>
+            </th>
+        </thead>
+            {% for news in all_news %}
+            <tr>
+            <td>
+                <a href="{% url 'news_detail' news.id %}">{{ news.name|cenzor }}</a> <!-- При нажатии на имя новости в таблице нас теперь будет перекидывать на страницу конкретной новости -->
+            </td>
+            <td>
+               {{ news.news_create_time|date:'m-d-Y' }}
+            </td>
+            <td>
+               {{ news.news_text|cenzor|truncatechars:50 }}
+            </td>
+             <td>
+               {{ news.category.name }}
+            </td>
+            <td>
+              {{ news.news_author.author_user.username }}
+            </td>
+            </tr>
+        {% endfor %}
+        </table>
+      {% if is_paginated %}
+
+            {% if page_obj.has_previous %}
+                <a href="?page=1">First</a>
+                <a href="?page={{ page_obj.previous_page_number }}"><<<</a>
+            {% endif %}
+
+            {% for num in page_obj.paginator.page_range %}
+                {% if page_obj.number == num %}
+                    <a>{{ num }}</a>
+                {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
+                    <a href="?page={{ num }}">{{ num }}</a>
+                {% endif %}
+            {% endfor %}
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">>>></a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+            {% endif %}
+
+        {% endif %}
+    {% endif %}
+
+{% endblock content %}
