--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -29,12 +29,17 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/news/create/">Create</a>
                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/login/">Login</a>
+                               </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/logout/">Logout</a>
+                               </li>
+
 {#                           <li class="nav-item">#}
 {#                               <a class="nav-link" href="/contacts/">Contact</a>#}
 {#                           </li>#}
                             </ul>
-                        </li>
-                    </ul>
                 </div>
             </div>
         </nav>
