--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!--  наследуемся от шаблона default.html, который мы создавали ещё во времена flatpages -->
+{% extends 'flatpages/default.html' %}
 
-</body>
-</html>
+
+{% block content %}
+<h2>Страница авторизованного пользователя {{request.user.username}}</h2>
+<div> Здесь может содержаться персональная информация для каждого пользователя </div>
+
+{% if is_not_authors %}
+<button> <a href="sign/upgrade/"> Стать автором!</a> </button>
+{% endif %}
+
+{% if is_not_authors_subscribers %}
+    <p>Вы подписаны на такие категории: </p>
+{% endif %}
+
+<button> <a href="sign/logout/">Выйти</a> </button>
+{% endblock %}
