--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h2> Войти в систему </h2>
+<h2> Регистрация пользователя </h2>
 <form method="post">
 {% csrf_token %}
 {{ form.as_p }}
