--- a/templates/category_detail.html
+++ b/templates/category_detail.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'flatpages/default.html' %}
 
-</body>
-</html>
+{% block title %}
+Category
+{% endblock title %}
+
+{% block content %}
+    <h1>Категория новостей</h1>
+            <h2>{{ category }}</h2>
+            <hr>
+
+<form method="post">
+    {% csrf_token %}
+{% if if_not_subscriber %}
+    <a class="btn btn-primary float-center" href="{% url 'subscribed' category.id %}">Отписаться</a>
+{% else %}
+    <a class="btn btn-primary float-center" href="{% url 'subscribed' category.id %}">Подписаться</a>
+{% endif %}
+</form>
+
+
+    {{ if_not_subscriber }}<br>
+    {{ re }}<br>
+
+{% endblock content %}
