--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -8,6 +8,7 @@
         <title>News</title>
         <!-- Core theme CSS (includes Bootstrap)-->
          {% load static %}
+         {% load cache %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
@@ -17,6 +18,7 @@
                 <a class="navbar-brand" href="#">Новостной сайт</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    {% cache 30 navbar %}
                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                                 <li class="nav-item active">
                                     <a class="nav-link" href="/news/">Main
@@ -25,6 +27,9 @@
                                </li>
                                <li class="nav-item">
                                     <a class="nav-link" href="/news/search/">Search</a>
+                               </li>
+                               <li class="nav-item">
+                                    <a class="nav-link" href="/category/">Categories</a>
                                </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/news/create/">Create</a>
@@ -40,6 +45,7 @@
 {#                               <a class="nav-link" href="/contacts/">Contact</a>#}
 {#                           </li>#}
                             </ul>
+                    {% endcache %}
                 </div>
             </div>
         </nav>
